# TRACE-Timeline-Reconstructor

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
src/: __init__.py  config.py
src/app/: __init__.py  file_picker.py  streamlit_app.py  theme.py  wizard_steps.py
src/features/: __init__.py  color.py  extractor.py  faces.py  lighting.py  ocr.py  resnet.py
src/models/: __init__.py  classifier.py  clustering.py
src/pipeline/: __init__.py  common.py  evaluate.py  feature_pipeline.py  predict.py  train.py  wizard.py
src/prepare/: __init__.py  ground_truth.py  pipeline.py  split.py  strip_exif.py
tests/: conftest.py  test_classifier_and_clustering.py  test_color_features.py  test_face_features.py  test_feature_bundle.py  test_ground_truth.py  test_lighting_features.py  test_ocr_features.py  test_pipeline_smoke.py  test_prepare_pipeline.py  test_resnet_features.py  test_split.py  test_strip_exif.py
