[project]
name = "trace-timeline-reconstructor"
version = "0.1.0"
description = "Восстановление хронологии фото без EXIF (год + сезон) на основе визуального анализа"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Никита Маначинский" }]
readme = "README.md"

dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "pillow>=10.4",
    "pillow-heif>=0.18",
    "piexif>=1.1.3",
    "opencv-python-headless>=4.10",
    "torch>=2.4,<2.6",
    "torchvision>=0.19,<0.21",
    "hdbscan>=0.8.38",
    "streamlit>=1.39",
    "plotly>=5.24",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
# M2 — faces + OCR. Конкретный face-стек выбираем в M2 (insightface либо OpenCV DNN),
# facenet-pytorch удалён из-за пина torchvision<0.18.
m2 = [
    "easyocr>=1.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage_html",
    "--cov-fail-under=80",
]
markers = [
    "slow: тесты, требующие реальных моделей или большого датасета",
    "integration: интеграционные тесты с реальной файловой системой",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/app/*", "src/**/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
